--- a/src/views/partials/headerNav.ejs
+++ b/src/views/partials/headerNav.ejs
@@ -1,34 +1,32 @@
-<div class="header">
+<header>
     <!--Logo del document-->
-    <a class="headerLogo" href="/">
-        <span</span>
+    <a class="headerLogo" href="/" title="Ciencia Electronics">
+        <span></span>
     </a>
-
     <!--Menu del document-->
-    <div class="menuVar" id="menuVar">
-        <img class="iconMenu" id="iconMenu" src="/icons/iconMenu.svg" alt="Menu">
-    </div>
-</div>
-
-<!--Navegacion del document-->
-<div class="nav" id="nav">
-    <a href="/" class="home">
-        <img class="iconsNav" src="/icons/iconHome.svg" alt="IconHome">
-        <span>INICIO</span>
-    </a>
-    <a href="/products" class="products">
-        <img class="iconsNav" src="/icons/iconProducts.svg" alt="iconProducts">
-        <span>PRODUCTOS</span>
-    </a>
-    <a href="/contacts" class="contacts">
-        <img class="iconsNav" src="/icons/iconContacts.svg" alt="iconContacts">
-        <span>CONTACTOS</span>
-    </a>
-    <a href="/guide" class="guide">
-        <img class="iconsNav" src="/icons/iconGuide.svg" alt="IconGuide">
-        <span>GUÍA</span>
-    </a>
-</div>
+    <menu class="menuNav">
+        <img class="iconNenu" src="/icons/iconMenu.svg" alt="Menú">
+        <!--Navegacion del document-->
+        <nav class="nav">
+            <a href="/" class="home">
+                <img class="iconsNav" src="/icons/iconHome.svg">
+                <span>INICIO</span>
+            </a>
+            <a href="/products" class="products">
+                <img class="iconsNav" src="/icons/iconProducts.svg">
+                <span>PRODUCTOS</span>
+            </a>
+            <a href="/contacts" class="contacts">
+                <img class="iconsNav" src="/icons/iconContacts.svg">
+                <span>CONTACTOS</span>
+            </a>
+            <a href="/guide" class="guide">
+                <img class="iconsNav" src="/icons/iconGuide.svg">
+                <span>GUÍA</span>
+            </a>
+        </nav>
+    </menu>
+</header>
 
 <!--Escript para el Toggle del menu-->
 <script src="/javascript/headerToggles.js"></script>
