--- a/src/public/css/contacts.css
+++ b/src/public/css/contacts.css
@@ -1,19 +1,17 @@
 /*Efectos para el contacts en el header*/
-.contacts span { 
-    color: var(--colorIndicatorBase); 
+.contacts {
+    color: var(--colorTextActiveHeader)!important;
+    background-color: var(--colorBoxActiveHeader); 
+    box-shadow: 0 0 7px 0 var(--colorBoxActiveHeader), inset 0 0 0 !important;
 }
 
-.contacts {
-    box-shadow: inset 0 -1px var(--colorIndicatorBase); 
-    background-color: var(--colorIndicatorActive);
+.contacts:hover {
+    background-color: var(--colorBoxActiveHeaderHover); 
+    box-shadow: 0 0 5px 0 var(--colorBoxShadowActiveHeaderHover) !important;
 }
 
 .contacts img { 
-    filter: invert(49%) sepia(57%) saturate(6463%) hue-rotate(202deg) brightness(92%) contrast(98%); 
-}
-
-.contacts:hover { 
-    background-color: var(--colorIndicatorActiveHover) !important; 
+    filter: var(--colorIconsActiveHeader); 
 }
 
 /*Map para el page*/
