--- a/src/public/css/headerNav.css
+++ b/src/public/css/headerNav.css
@@ -1,135 +1,46 @@
 /*Estilos del header*/
-.header {
+header {
     width: 100%;
-    height: 50px;
-    background-color: var(--colorHeaderBase);
-    display: flex;
-    justify-content: center;
+    height: 55px;
+    background-color: var(--colorHeader);
     box-shadow: var(--boxShadowHeader);
-    position: relative;
-}
-
-.headerLogo {
-    padding-left: 18px;
-    padding-right: 18px;
-    height: 50px;
+    position: absolute;
+    z-index: 1000;
     display: flex;
     align-items: center;
-    cursor: pointer;
-    position: absolute;
-    left: 0;
-}
-
-/*Estilos del nav*/
-.nav {
-    display: flex;
-    position: absolute;
-    top: 0;
-    width: 100%;
     justify-content: center;
-    z-index: 5;
-}
-
-.nav a {
-    padding-left: 18px;
-    padding-right: 18px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-}
-
-.nav a:hover {
-    background-color: var(--colorBotonsHeadHover);
-}
-
-.nav a:hover span {
-    color: var(--colorIndicatorBase);
-}
-
-.nav a:hover img {
-    filter: invert(49%) sepia(57%) saturate(6463%) hue-rotate(202deg) brightness(92%) contrast(98%); 
-}
-
-.nav span {
-    color: var(--colorTextList);
-}
-
-.iconsNav {
-    width: 23px;
-    margin-right: 5px;
-}
-
-.iconsNav.on {
-    filter: invert(49%) sepia(57%) saturate(6463%) hue-rotate(202deg) brightness(92%) contrast(98%);
+    box-sizing: border-box;
 }
 
 /*Estilos del menu*/
-.menuVar {
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    position: absolute;
-    right: 0;
+.menuNav {
     display: flex;
-    visibility: hidden;
-    justify-content: center;
+}
+
+.iconsNav, .iconNenu {
+    width: 25px;
+    cursor: pointer;
+    display: none;
+}
+
+/*Estilos del nav*/
+.nav, a {
+    display: flex;
     align-items: center;
 }
 
-.menuVar:hover {
-    background-color: var(--colorBotonsHeadHover);
+.nav a {
+    height: 43px;
+    box-sizing: border-box;
+    padding: 0 25px;
+    margin: 0 3px;
+    color: var(--colorTextHeader);   
+    transition: 0.1s;
+    border-radius: 15px;
+    position: relative;
 }
 
-.iconMenu {
-    width: 23px;
-}
-
-.menuVar.on{
-    background-color: var(--colorIndicatorActive);
-}
-
-.menuVar.on:hover {
-    background-color: var(--colorIndicatorActiveHover);
-}
-
-.iconMenu.on {
-    filter: invert(33%) sepia(100%) saturate(2253%) hue-rotate(200deg) brightness(96%) contrast(89%);
-}
-
-/*Redimencions del document*/
-@media (max-width: 1025px) {
-    .iconsNav {
-        position: absolute;
-        top: -25px;
-    }
-}
-
-
-@media (max-width: 1000px) {
-    .nav {
-        width: 100%;
-        height: calc(100% - 50px);
-        background-color: var(--colorHeaderBase);
-        visibility: hidden;
-        top: 50px;
-        display: block;
-    }
-
-    .nav.on {
-        visibility: visible;
-    }
-
-    .iconsNav {
-        position: relative;
-        top: auto;
-        margin-right: 15px;
-    }
-
-    .menuVar {
-        visibility: visible;
-    }
-
-    .headerLogo {
-        position: relative;
-    }
+.nav a:hover {
+    color: black;
+    box-shadow: 0 0 10px 0 #00000011, inset 0 0 0 1px var(--colorBorderBoxsesHeader);
 }
