--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,17 +1,15 @@
 /*Efectos para el home en el header*/
-.home span { 
-    color: var(--colorIndicatorBase); 
+.home {
+    color: var(--colorTextActiveHeader)!important;
+    background-color: var(--colorBoxActiveHeader); 
+    box-shadow: 0 0 7px 0 var(--colorBoxActiveHeader);
 }
 
-.home {
-    box-shadow: inset 0 -1px var(--colorIndicatorBase); 
-    background-color: var(--colorIndicatorActive); 
+.home:hover {
+    background-color: var(--colorBoxActiveHeaderHover); 
+    box-shadow: 0 0 4px 0 var(--colorBoxShadowActiveHeaderHover);
 }
 
 .home img { 
-    filter: invert(49%) sepia(57%) saturate(6463%) hue-rotate(202deg) brightness(92%) contrast(98%); 
-}
-            
-.home:hover { 
-    background-color: var(--colorIndicatorActiveHover) !important; 
+    filter: var(--colorIconsActiveHeader); 
 }
