--- a/src/public/css/products.css
+++ b/src/public/css/products.css
@@ -1,17 +1,17 @@
 /*Efectos para el products en el header*/
-.products span { 
-    color: var(--colorIndicatorBase); 
-}
-.products { 
-    box-shadow: inset 0 -1px var(--colorIndicatorBase); 
-    background-color: var(--colorIndicatorActive); 
-}
-.products img { 
-    filter: invert(49%) sepia(57%) saturate(6463%) hue-rotate(202deg) brightness(92%) contrast(98%); 
+.products {
+    color: var(--colorTextActiveHeader)!important;
+    background-color: var(--colorBoxActiveHeader); 
+    box-shadow: 0 0 7px 0 var(--colorBoxActiveHeader), inset 0 0 0 !important;
 }
 
-.products:hover { 
-    background-color: var(--colorIndicatorActiveHover) !important; 
+.products:hover {
+    background-color: var(--colorBoxActiveHeaderHover); 
+    box-shadow: 0 0 5px 0 var(--colorBoxShadowActiveHeaderHover) !important;
+}
+
+.products img { 
+    filter: var(--colorIconsActiveHeader); 
 }
 
 /*Cercos Nav de products*/
