--- a/src/views/cercos.ejs
+++ b/src/views/cercos.ejs
@@ -2,7 +2,7 @@
 <%- include("partials/head.ejs") %>
 
 <!--Efectos para el products en el header-->
-<link rel="stylesheet" href="/css/products.css" />
+<link rel="stylesheet" href="/css/cercos.css" />
 <!------------------------------------------------------------------------------------------------->
 <!--Header y Nav del document-->
 <%- include("partials/headerNav.ejs") %>
