--- a/src/views/partials/headerNav.ejs
+++ b/src/views/partials/headerNav.ejs
@@ -3,18 +3,17 @@
     <a class="headerLogo" href="/" title="Ciencia Electronics">
         <span></span>
     </a>
-    <!--Menu del document-->
+<!--Menu del document-->
     <menu class="menuNav">
-        <img class="iconNenu" src="/icons/iconMenu.svg" alt="Menú">
         <!--Navegacion del document-->
         <nav class="nav">
             <a href="/" class="home">
                 <img class="iconsNav" src="/icons/iconHome.svg">
                 <span>INICIO</span>
             </a>
-            <a href="/products" class="products">
-                <img class="iconsNav" src="/icons/iconProducts.svg">
-                <span>PRODUCTOS</span>
+            <a href="/cercos" class="cercos">
+                <img class="iconsNav" src="/icons/iconCercos.svg">
+                <span>CERCOS</span>
             </a>
             <a href="/contacts" class="contacts">
                 <img class="iconsNav" src="/icons/iconContacts.svg">
@@ -25,7 +24,11 @@
                 <span>GUÍA</span>
             </a>
         </nav>
+        <div class="masc"></div>
     </menu>
+    <div class="menuIcon">
+        <img class="iconsNav" id="iconMenu" src="/icons/iconMenu.svg" alt="Menú">
+    </div> 
 </header>
 
 <!--Escript para el Toggle del menu-->
