--- a/src/public/css/cercos.css
+++ b/src/public/css/cercos.css
@@ -1,16 +1,15 @@
 /*Efectos para el products en el header*/
-.products {
+.cercos {
     color: var(--colorTextActiveHeader)!important;
     background-color: var(--colorBoxActiveHeader); 
-    box-shadow: 0 0 7px 0 var(--colorBoxActiveHeader), inset 0 0 0 !important;
+    box-shadow: 0 0 0 !important;
 }
 
-.products:hover {
+.cercos:hover {
     background-color: var(--colorBoxActiveHeaderHover); 
-    box-shadow: 0 0 5px 0 var(--colorBoxShadowActiveHeaderHover) !important;
 }
 
-.products img { 
+.cercos img { 
     filter: var(--colorIconsActiveHeader); 
 }
 
