--- a/src/public/css/headerNav.css
+++ b/src/public/css/headerNav.css
@@ -1,11 +1,11 @@
 /*Estilos del header*/
 header {
-    width: 100%;
+    width: 100vw;
     height: 55px;
     background-color: var(--colorHeader);
-    box-shadow: var(--boxShadowHeader);
+    box-shadow: 0 5px 15px var(--colorBoxShadowHeader);
     position: absolute;
-    z-index: 1000;
+    z-index: 100000;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,11 +13,37 @@ header {
 }
 
 /*Estilos del menu*/
-.menuNav {
+.menuNav, .menuIcon {
     display: flex;
 }
 
-.iconsNav, .iconNenu {
+.menuIcon {
+    display: none;
+    border-radius: 8px;
+    box-shadow: 0 0 0 1px var(--colorBorderBoxsesHeader);
+    width: 45px;
+    height: 45px;
+    position: absolute;
+    right: 5px;  
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.menuIcon.on {
+    background-color: var(--colorBoxActiveHeader); 
+    box-shadow: 0 0 0;
+}
+
+.menuIcon.on:hover {
+    background-color: var(--colorBoxActiveHeaderHover); 
+}
+
+.menuIcon.on img{
+    filter: var(--colorIconsActiveHeader);
+}
+
+.iconsNav{
     width: 25px;
     cursor: pointer;
     display: none;
@@ -27,20 +53,77 @@ header {
 .nav, a {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .nav a {
-    height: 43px;
+    height: 40px;
     box-sizing: border-box;
-    padding: 0 25px;
+    padding: 0 18px;
     margin: 0 3px;
     color: var(--colorTextHeader);   
-    transition: 0.1s;
-    border-radius: 15px;
-    position: relative;
+    transition: 0.08s;
+    border-radius: 12px;
 }
 
 .nav a:hover {
     color: black;
-    box-shadow: 0 0 10px 0 #00000011, inset 0 0 0 1px var(--colorBorderBoxsesHeader);
+    box-shadow: inset 0 0 0 1px var(--colorBorderBoxsesHeader);
+}
+
+.nav span {
+    font-family: "SF semiBold";
+    font-size: 15px;
+}
+
+
+
+@media (max-width: 1024px) {
+    .menuNav {
+        display: none;
+    }
+
+    .menuNav.on {
+        display: flex;
+        width: 100%;
+        height: calc(100vh - 55px);
+        margin: 100vh 0 0 !important;
+    }
+
+    .masc {
+        display: none;
+    }
+
+    .masc.on {
+        width: 100%;
+        height: 100%;
+        background-color: #0000007b;
+        display: flex;
+    }
+    
+    .nav {
+        position: absolute;
+        width: 240px;
+        height: calc(100vh - 55px);
+        background-color: var(--colorHeader);
+        display: block;
+        box-shadow: 5px 13px 15px var(--colorBoxShadowHeader);
+    }
+
+    .nav a {
+        margin: 8px 15px;
+        padding: 0 25px;
+    }
+
+    .nav a:first-child {
+        margin: 20px 15px 8px;
+    }
+
+    .nav span {
+        margin-left: 10px;
+    }
+
+    .iconsNav, .menuIcon {
+        display: flex;
+    }
 }
