--- a/src/public/css/cercos.css
+++ b/src/public/css/cercos.css
@@ -9,31 +9,38 @@
     background-color: var(--colorBoxActiveHeaderHover); 
 }
 
+.cercos:hover ~ .botonList {
+    box-shadow: inset 0 0 0;
+}
+
 .cercos img { 
     filter: var(--colorIconsActiveHeader); 
 }
 
+.botonList {
+    background-color: var(--colorBoxActiveHeader);
+}
+
+.botonList.on {
+    background-color: var(--colorBoxActiveHeaderHover); 
+    box-shadow: inset 0 0 0;
+}
+
+.botonList:hover {
+    background-color: var(--colorBoxActiveHeaderHover); 
+    box-shadow: inset 0 0 0;
+}
+
+.botonList img {
+    filter: var(--colorIconsActiveHeader);
+}
+
+.botonList:hover img {
+    filter: var(--colorIconsActiveHeader);
+}
+
 /*Cercos Nav de products*/
-.cercosNav {
-    box-shadow: var(--boxShadowCercosNav);
-}
 
-.cercosNav a{
-    height: fit-content !important;
-    border-radius: 5px !important;
-    border: var(--colorBorderBoxes);
-    box-shadow: 0 0 0 !important;
-}
-
-.cercosNav a:hover {
-    background-color: var(--colorSectionsCercosNavHover);
-}
-
-.cercosNav span {
-    color: var(--colorTextEmergency);
-    text-align: center;
-    margin: 15px;
-}
 
 /*Etiquetas A y su comportamiento*/
 .page a {
