--- a/src/public/css/globalCercosInfo.css
+++ b/src/public/css/globalCercosInfo.css
@@ -1,16 +1,37 @@
 /*Efectos para el products en el header*/
-.products {
+.cercos {
     color: var(--colorTextActiveHeader)!important;
     background-color: var(--colorBoxActiveHeader); 
     box-shadow: 0 0 0 !important;
 }
 
-.products:hover {
+.cercos:hover {
     background-color: var(--colorBoxActiveHeaderHover); 
 }
 
-.products img { 
+.cercos:hover ~ .botonList {
+    box-shadow: inset 0 0 0;
+}
+
+.cercos img { 
     filter: var(--colorIconsActiveHeader); 
+}
+
+.botonList {
+    background-color: var(--colorBoxActiveHeader);
+}
+
+.botonList:hover {
+    background-color: var(--colorBoxActiveHeaderHover); 
+    box-shadow: inset 0 0 0;
+}
+
+.botonList img {
+    filter: var(--colorIconsActiveHeader);
+}
+
+.botonList:hover img {
+    filter: var(--colorIconsActiveHeader);
 }
 
 /*Lista de vistas*/
