--- a/src/views/cercos.ejs
+++ b/src/views/cercos.ejs
@@ -11,7 +11,7 @@
     <div class="page">
         
         <!--Sub navegacion para products-->
-        <article class="cercosNav">
+        <article class="s">
             <a href="#1"><span>Cercos a Panel Solar y Bateria</span></a>
             <a href="#2"><span>Cercos a Corriente Directa</span></a>
             <a href="#3"><span>Cercos a Corriente Directa y Bateria</span></a>
