--- a/src/views/partials/headerNav.ejs
+++ b/src/views/partials/headerNav.ejs
@@ -15,6 +15,34 @@
                 <img class="iconsNav" src="/icons/iconCercos.svg">
                 <span>CERCOS</span>
             </a>
+            <span class="botonList">
+                <img src="/icons/arrowDown.svg" alt="">
+            </span>
+            <nav class="cercosNav">
+                <a href="/cercos#1" class="b1">
+                    <div class="navImg">
+                        <img src="/icons/iconPanel.svg" alt="">
+                        <h1>+</h1>
+                        <img src="/icons/iconBateri.svg" alt="">
+                    </div>
+                    <span>Panel Solar y Batería</span>
+                </a>
+                <a href="/cercos#2" class="b2">
+                    <div class="navImg">
+                        <img src="/icons/iconCorriente.svg" alt="">
+                    </div>
+                    <span>Corriente Directa</span>
+                </a>
+                <a href="/cercos#3" class="b3">
+                    <div class="navImg">
+                        <img src="/icons/iconCorriente.svg" alt="">
+                        <h1>+</h1>
+                        <img src="/icons/iconBateri.svg" alt="">
+                    </div>
+                    <span>Corriente Directa y Batería</span>
+                </a>
+            </nav>
+
             <a href="/contacts" class="contacts">
                 <img class="iconsNav" src="/icons/iconContacts.svg">
                 <span>CONTACTOS</span>
