--- a/src/views/partials/headerNav.ejs
+++ b/src/views/partials/headerNav.ejs
@@ -19,7 +19,7 @@
                 <img src="/icons/arrowDown.svg" alt="">
             </span>
             <nav class="cercosNav">
-                <a href="/cercos#1" class="b1">
+                <a href="/cercos#1" target="_top" class="b1">
                     <div class="navImg">
                         <img src="/icons/iconPanel.svg" alt="">
                         <h1>+</h1>
