--- a/src/views/partials/headerNav.ejs
+++ b/src/views/partials/headerNav.ejs
@@ -1,9 +1,9 @@
 <header>
     <!--Logo del document-->
-    <a class="headerLogo" href="/" title="Ciencia Electronics">
+    <a class="headerLogo" href="/">
         <span></span>
     </a>
-<!--Menu del document-->
+    <!--Menu del document-->
     <menu class="menuNav">
         <!--Navegacion del document-->
         <nav class="nav">
@@ -16,33 +16,33 @@
                 <span>CERCOS</span>
             </a>
             <span class="botonList">
-                <img src="/icons/arrowDown.svg" alt="">
+                <img id="imgList" src="/icons/arrowDown.svg">
             </span>
+            <!--Nav cercos-->
             <nav class="cercosNav">
-                <a href="/cercos#1" target="_top" class="b1">
+                <a href="/cercos#1" class="b1">
                     <div class="navImg">
-                        <img src="/icons/iconPanel.svg" alt="">
+                        <img src="/icons/iconPanel.svg">
                         <h1>+</h1>
-                        <img src="/icons/iconBateri.svg" alt="">
+                        <img src="/icons/iconBateri.svg">
                     </div>
                     <span>Panel Solar y Batería</span>
                 </a>
                 <a href="/cercos#2" class="b2">
                     <div class="navImg">
-                        <img src="/icons/iconCorriente.svg" alt="">
+                        <img src="/icons/iconCorriente.svg">
                     </div>
                     <span>Corriente Directa</span>
                 </a>
                 <a href="/cercos#3" class="b3">
                     <div class="navImg">
-                        <img src="/icons/iconCorriente.svg" alt="">
+                        <img src="/icons/iconCorriente.svg">
                         <h1>+</h1>
-                        <img src="/icons/iconBateri.svg" alt="">
+                        <img src="/icons/iconBateri.svg">
                     </div>
                     <span>Corriente Directa y Batería</span>
                 </a>
             </nav>
-
             <a href="/contacts" class="contacts">
                 <img class="iconsNav" src="/icons/iconContacts.svg">
                 <span>CONTACTOS</span>
@@ -52,10 +52,12 @@
                 <span>GUÍA</span>
             </a>
         </nav>
+        <!--Mascara para el nav-->
         <div class="masc"></div>
     </menu>
+    <!--Icon Menu-->
     <div class="menuIcon">
-        <img class="iconsNav" id="iconMenu" src="/icons/iconMenu.svg" alt="Menú">
+        <img class="iconsNav" id="iconMenu" src="/icons/iconMenu.svg">
     </div> 
 </header>
 
