--- a/src/public/css/contacts.css
+++ b/src/public/css/contacts.css
@@ -13,6 +13,22 @@
     filter: var(--colorIconsActiveHeader); 
 }
 
+@media (max-width: 1020px) {
+    .botonList.on {
+        border-radius: 12px 12px 0 0;
+        background-color: var(--colorBoxActiveHeader);
+        box-shadow: none;
+    }
+    
+    .botonList.on img {
+        filter: var(--colorIconsActiveHeader);
+    }
+    
+    .cercosNav.on {
+        border-radius: 12px 0 12px 12px;
+    }   
+}
+
 /*Map para el page*/
 .map {
     width: 100%;
