--- a/src/public/css/globalStyles.css
+++ b/src/public/css/globalStyles.css
@@ -9,9 +9,7 @@
     --colorBoxActiveHeader: #4183ed;
     --colorBoxActiveHeaderHover: #226adf;
     --colorIconsActiveHeader: invert(100%) sepia(0%) saturate(7500%) hue-rotate(24deg) brightness(104%) contrast(102%);
-
-    /*Borders*/
-
+    --colorTextNormal: #000000;
 } 
 
 /*Estilos globales*/
@@ -19,25 +17,24 @@
     margin: 0;
     padding: 0;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
     color: var(--colorBaseBlack);
     font-family: "SF regular";
 }
 
 /*Content del document*/
 .content {
-    width: 100%;
-    height: calc(100% - 55px);
-    box-sizing: border-box;
+    width: 100vw;
+    height: calc(100vh - 50px);
     padding: 30px 15px 15px;
     overflow-y: scroll;
     scroll-behavior: smooth;
     position: absolute;
-    bottom: 0;
+    top: 50px;
+    z-index: -1;
 }
 
 /*ScrollBar del content*/
@@ -68,12 +65,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 40px;
-}
-
-.page div, iframe {
-    border-radius: 5px;
-    margin: 10px;
-    flex: auto;
 }
 
 .page article:last-child {
