--- a/src/views/partials/headerNav.ejs
+++ b/src/views/partials/headerNav.ejs
@@ -21,26 +21,16 @@
             <!--Nav cercos-->
             <nav class="cercosNav">
                 <a href="/cercos#1" class="b1">
-                    <div class="navImg">
-                        <img src="/icons/iconPanel.svg">
-                        <h1>+</h1>
-                        <img src="/icons/iconBateri.svg">
-                    </div>
-                    <span>Panel Solar y Batería</span>
+                    <img src="/icons/iconPanel.svg">
+                    <span>Panel Solar más Batería</span>
                 </a>
                 <a href="/cercos#2" class="b2">
-                    <div class="navImg">
-                        <img src="/icons/iconCorriente.svg">
-                    </div>
+                    <img src="/icons/iconCorriente.svg">
                     <span>Corriente Directa</span>
                 </a>
                 <a href="/cercos#3" class="b3">
-                    <div class="navImg">
-                        <img src="/icons/iconCorriente.svg">
-                        <h1>+</h1>
-                        <img src="/icons/iconBateri.svg">
-                    </div>
-                    <span>Corriente Directa y Batería</span>
+                    <img src="/icons/iconBateri.svg">
+                    <span>Corriente más Batería</span>
                 </a>
             </nav>
             <a href="/contacts" class="contacts">
