--- a/src/public/css/cercos.css
+++ b/src/public/css/cercos.css
@@ -10,7 +10,7 @@
 }
 
 .cercos:hover ~ .botonList {
-    box-shadow: inset 0 0 0;
+    box-shadow: none;
 }
 
 .cercos img { 
@@ -23,12 +23,12 @@
 
 .botonList.on {
     background-color: var(--colorBoxActiveHeaderHover); 
-    box-shadow: inset 0 0 0;
+    box-shadow: none;
 }
 
 .botonList:hover {
     background-color: var(--colorBoxActiveHeaderHover); 
-    box-shadow: inset 0 0 0;
+    box-shadow: none;
 }
 
 .botonList img {
@@ -38,9 +38,6 @@
 .botonList:hover img {
     filter: var(--colorIconsActiveHeader);
 }
-
-/*Cercos Nav de products*/
-
 
 /*Etiquetas A y su comportamiento*/
 .page a {
