--- a/src/public/css/globalStyles.css
+++ b/src/public/css/globalStyles.css
@@ -22,8 +22,6 @@
 
 body {
     color: var(--colorBaseBlack);
-    display: flex;
-    flex-wrap: wrap;
     font-family: "SF regular";
 }
 
@@ -31,24 +29,15 @@ body {
 .content {
     width: 100%;
     height: calc(100vh - 50px);
-    margin-top: 50px;
     padding: 30px 15px 15px;
+    margin: 50px 0 0;
     overflow-y: scroll;
     scroll-behavior: smooth;
 }
 
 /*ScrollBar del content*/
 .content::-webkit-scrollbar {
-    width: 10px;
-}
-
-.content::-webkit-scrollbar-thumb {
-    background-color: #0000002d;
-    border-radius: 5px;
-}
-
-.content::-webkit-scrollbar-thumb:hover {
-    background-color: #00000041;
+    display: none;
 }
 
 /*Page del ducument*/
@@ -64,11 +53,11 @@ body {
     padding: 0.5%;
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 40px;
+    margin: 0 0 40px;
 }
 
 .page article:last-child {
-    margin-bottom: 0;
+    margin: 0;
 }
 
 .page h1 {
